# uav_city_navigation_GEO_and_MINISNAP

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: GeometricController.cfg
include/uav_city_navigation/: common.h  geometric_controller.h  jerk_tracking_control.h  nonlinear_attitude_control.h  nonlinear_geometric_control.h
launch/: sitl_trajectory_track_circle.launch  test.launch
rviz/: config_file.rviz  test_traj.rviz
scripts/: rviz_city_marker.py
src/: geometric_controller.cpp  geometric_controller_node.cpp  jerk_tracking_control.cpp  nonlinear_attitude_control.cpp  nonlinear_geometric_control.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  waypoint_generator.cpp
worlds/: city_osm_roundabout_mine.world
